--- a/index.html
+++ b/index.html
@@ -37,15 +37,52 @@
           <div class="inner cover">
             <h1 class="cover-heading">Cat Food Analysis</h1>
             <p class="lead">Figure out how much protein, fat and carbs are in your kitty's food by entering the percentages found on the package's Guaranteed Analysis:</p>
-              <div>
-                <input id="protein" type="number" placeholder="Minimum Crude Protein Percentage">
-                <input id="fat" type="number" placeholder="Minimum Crude Fat Percentage">
-                <input id="fiber" type="number" placeholder="Maximum Crude Fiber Percentage">
-                <input id="moisture" type="number" placeholder="Moisture Percentage">
-                <input id="ash" type="number" placeholder="Maximum Ash Percentage">
-                <button type="button" id="calculate" class="btn btn-lg btn-default">Calculate</button>
-                <div id="result"></div>
+            <div>
+              <div class="form-group">
+                <label for="protein" class="col-sm-10 control-label">Minimum Crude Protein Percentage</label>
+                <div class="col-sm-2">
+                  <input id="protein" type="number">
+                </div>
               </div>
+              <div class="form-group">
+                <label for="fat" class="col-sm-10 control-label">Minimum Crude Fat Percentage</label>
+                <div class="col-sm-2">
+                  <input id="fat" type="number">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="fiber" class="col-sm-10 control-label">Maximum Crude Fiber Percentage</label>
+                <div class="col-sm-2">
+                  <input id="fiber" type="number">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="moisture" class="col-sm-10 control-label">Moisture Percentage</label>
+                <div class="col-sm-2">  
+                  <input id="moisture" type="number">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="ash" class="col-sm-10 control-label">Maximum Ash Percentage</label>
+                <div class="col-sm-2">
+                  <input id="ash" type="number">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-10 col-sm-2">
+                  <button id="calculate" type="submit" class="btn btn-default">Calculate</button>
+                </div>
+              </div>
+              <h3 id="results-title"></h3>
+              <dl class="dl-horizontal">
+                <dt id="pro-term"></dt>
+                <dd id="pro-def"></dd>
+                <dt id="fat-term"></dt>
+                <dd id="fat-def"></dd>
+                <dt id="carb-term"></dt>
+                <dd id="carb-def"></dd>
+              </dl>
+            </div>
           </div>
 
           <div class="mastfoot">
@@ -81,10 +118,13 @@
         var proteinPercent = calsProtein/totalCals;
         var fatPercent = calsFat/totalCals;
         var carbPercent = calsCarb/totalCals;
-        $("#result").append("<h3>Results</h3>")
-        $("#result").append("<p>"+(proteinPercent*100).toFixed(2)+"% protein</p>");
-        $("#result").append("<p>"+(fatPercent*100).toFixed(2)+"% fat</p>");
-        $("#result").append("<p>"+(carbPercent*100).toFixed(2)+"% carbohydrates</p>");
+        $("#results-title").append("Results");
+        $("#pro-term").append("Protein");
+        $("#pro-def").append((proteinPercent*100).toFixed(2)+"%");
+        $("#fat-term").append("Fat");
+        $("#fat-def").append((fatPercent*100).toFixed(2)+"%");
+        $("#pro-carb").append("Carbohydrates");
+        $("#result").append("(carbPercent*100).toFixed(2)+"%");
       });
     </script>
 
