--- a/index.html
+++ b/index.html
@@ -39,48 +39,48 @@
             <p class="lead">Figure out how much protein, fat and carbs are in your kitty's food by entering the percentages found on the package's Guaranteed Analysis:</p>
             <div>
               <div class="form-group">
-                <label for="protein" class="col-sm-10 control-label">Minimum Crude Protein Percentage</label>
-                <div class="col-sm-2">
+                <label for="protein" class="col-sm-10 control-label text-right">Minimum Crude Protein Percentage</label>
+                <div class="col-sm-2 text-left">
                   <input id="protein" type="number" class="form-control">
                 </div>
               </div>
               <div class="form-group">
-                <label for="fat" class="col-sm-10 control-label">Minimum Crude Fat Percentage</label>
-                <div class="col-sm-2">
+                <label for="fat" class="col-sm-10 control-label text-right">Minimum Crude Fat Percentage</label>
+                <div class="col-sm-2 text-left">
                   <input id="fat" type="number" class="form-control">
                 </div>
               </div>
               <div class="form-group">
-                <label for="fiber" class="col-sm-10 control-label">Maximum Crude Fiber Percentage</label>
-                <div class="col-sm-2">
+                <label for="fiber" class="col-sm-10 control-label text-right">Maximum Crude Fiber Percentage</label>
+                <div class="col-sm-2 text-left">
                   <input id="fiber" type="number" class="form-control">
                 </div>
               </div>
               <div class="form-group">
-                <label for="moisture" class="col-sm-10 control-label">Moisture Percentage</label>
-                <div class="col-sm-2">  
+                <label for="moisture" class="col-sm-10 control-label text-right">Moisture Percentage</label>
+                <div class="col-sm-2 text-left">  
                   <input id="moisture" type="number" class="form-control">
                 </div>
               </div>
               <div class="form-group">
-                <label for="ash" class="col-sm-10 control-label">Maximum Ash Percentage</label>
-                <div class="col-sm-2">
+                <label for="ash" class="col-sm-10 control-label text-right">Maximum Ash Percentage</label>
+                <div class="col-sm-2 text-left">
                   <input id="ash" type="number" class="form-control">
                 </div>
               </div>
               <div class="form-group">
-                <div class="col-sm-offset-10 col-sm-2">
+                <div class="col-sm-offset-10 col-sm-2 text-left">
                   <button id="calculate" type="submit" class="btn btn-default">Calculate</button>
                 </div>
               </div>
               <h3 id="results-title"></h3>
               <dl class="dl-horizontal">
-                <dt id="pro-term"></dt>
-                <dd id="pro-def"></dd>
-                <dt id="fat-term"></dt>
-                <dd id="fat-def"></dd>
-                <dt id="carb-term"></dt>
-                <dd id="carb-def"></dd>
+                <dt id="pro-term" class="text-right"></dt>
+                <dd id="pro-def" class="text-left"></dd>
+                <dt id="fat-term" class="text-right"></dt>
+                <dd id="fat-def" class="text-left"></dd>
+                <dt id="carb-term" class="text-right"></dt>
+                <dd id="carb-def" class="text-left"></dd>
               </dl>
             </div>
           </div>
