--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,8 +15,10 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="calculator.js"></script>
   </head>
-  <body>
+  <body ng-controller="FoodCalc">
     <div class="site-wrapper">
 
       <div class="site-wrapper-inner">
@@ -44,7 +46,7 @@
                     <label for="protein" class="col-sm-7 control-label">Minimum Crude Protein</label>
                     <div class="col-sm-5">
                       <div class="input-group">
-                        <input id="protein" type="number" class="form-control">
+                        <input id="protein" type="number" class="form-control" ng-model="minCrudeProtein">
                       <div class="input-group-addon">%</div>
                     </div>
                   </div>
@@ -52,7 +54,7 @@
                     <label for="fat" class="col-sm-7 control-label">Minimum Crude Fat</label>
                     <div class="col-sm-5">
                       <div class="input-group">
-                        <input id="fat" type="number" class="form-control">
+                        <input id="fat" type="number" class="form-control" ng-model="minCrudeFat">
                       <div class="input-group-addon">%</div>
                     </div>
                   </div>
@@ -60,7 +62,7 @@
                     <label for="fiber" class="col-sm-7 control-label">Maximum Crude Fiber</label>
                     <div class="col-sm-5">
                       <div class="input-group">
-                        <input id="fiber" type="number" class="form-control">
+                        <input id="fiber" type="number" class="form-control" ng-model="maxCrudeFiber">
                       <div class="input-group-addon">%</div>
                     </div>
                   </div>
@@ -68,7 +70,7 @@
                     <label for="moisture" class="col-sm-7 control-label">Moisture</label>
                     <div class="col-sm-5">
                       <div class="input-group">    
-                      <input id="moisture" type="number" class="form-control">
+                      <input id="moisture" type="number" class="form-control" ng-model="moisture">
                     <div class="input-group-addon">%</div>
                     </div>
                   </div>
@@ -76,26 +78,26 @@
                     <label for="ash" class="col-sm-7 control-label">Maximum Ash</label>
                     <div class="col-sm-5">
                       <div class="input-group">
-                        <input id="ash" type="number" class="form-control">
+                        <input id="ash" type="number" class="form-control" ng-model="maxAsh">
                       <div class="input-group-addon">%</div>
                     </div>
                   </div>
                   <div class="form-group">
                     <div class="col-sm-offset-7 col-sm-5">
-                      <button id="calculate" type="submit" class="btn btn-default">Calculate</button>
+                      <button id="calculate" type="submit" class="btn btn-default" ng-click="calcNutrition()">Calculate</button>
                     </div>
                   </div>
                 </div>
               </div><!-- col-md-7 -->
               <div class="col-md-5">
-                <h3 id="results-title"></h3>
+                <h3 id="results-title">{{ resultsTitle }}</h3>
                 <dl class="dl-horizontal">
-                  <dt id="pro-term"></dt>
-                  <dd id="pro-def"></dd>
-                  <dt id="fat-term"></dt>
-                  <dd id="fat-def"></dd>
-                  <dt id="carb-term"></dt>
-                  <dd id="carb-def"></dd>
+                  <dt id="pro-term">{{ proteinTitle }}</dt>
+                  <dd id="pro-def">{{ proteinPercent }}</dd>
+                  <dt id="fat-term">{{ fatTitle }}</dt>
+                  <dd id="fat-def">{{ fatPercent }}</dd>
+                  <dt id="carb-term">{{ carbTitle }}</dt>
+                  <dd id="carb-def">{{ carbPercent }}</dd>
                 </dl>
               </div><!-- col-md-5 -->
             </div><!-- row -->
@@ -113,42 +115,7 @@
 
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>  
-     
-    <script>
-      $("#calculate").click(function(){
-        $("#results-title").html("");
-        $("#pro-term").html("");
-        $("#pro-def").html("");
-        $("#fat-term").html("");
-        $("#fat-def").html("");
-        $("#carb-term").html("");
-        $("#carb-def").html("");
-        var protein = parseFloat($("#protein").val());
-        var fat = parseFloat($("#fat").val());
-        var fiber = parseFloat($("#fiber").val());
-        var moisture = parseFloat($("#moisture").val());
-        var ash = parseFloat($("#ash").val());
-        var carbContent = 100-protein-fat-fiber-moisture-ash;
-        var dryMatter = 100-moisture;
-        var dryMatterBasis = carbContent/dryMatter;
-        var calsProtein = 3.5 * protein;
-        var calsFat = 8.5 * fat;
-        var calsCarb = 3.5 * carbContent;
-        var totalCals = calsProtein + calsFat + calsCarb;
-        var proteinPercent = calsProtein/totalCals;
-        var fatPercent = calsFat/totalCals;
-        var carbPercent = calsCarb/totalCals;
-        $("#results-title").append("Results");
-        $("#pro-term").append("Protein");
-        $("#pro-def").append((proteinPercent*100).toFixed(2)+"%");
-        $("#fat-term").append("Fat");
-        $("#fat-def").append((fatPercent*100).toFixed(2)+"%");
-        $("#carb-term").append("Carbohydrates");
-        $("#carb-def").append((carbPercent*100).toFixed(2)+"%");
-      });
-    </script>
 
     <script>
       /*!
