Added ng-show to div

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   </div>
                 </div>
               </div><!-- col-md-7 -->
-              <div class="col-md-5">
+              <div class="col-md-5" ng-show="authorized">
                 <h3 id="results-title">{{ resultsTitle }}</h3>
                 <dl class="dl-horizontal">
                   <dt id="pro-term">{{ proteinTitle }}</dt>
