--- a/index.html
+++ b/index.html
@@ -25,17 +25,6 @@
 
         <div class="cover-container">
 
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Cat Food Analysis</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li><a href="http://www.catinfo.org/">CatInfo.org</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-
           <div class="inner cover">
             <div class="row">
               <div class="col-md-7">
@@ -105,7 +94,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Created with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> by <a href="https://jackie.io">Jackie Johnston</a>.</p>
+              <p>Created with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> by <a href="https://jackie.io">Jackie Johnston</a>. For more information on feline nutrition, go to <a href="http://www.catinfo.org/">CatInfo.org</a>.</p>
             </div>
           </div>
 
