--- a/index.html
+++ b/index.html
@@ -15,98 +15,112 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <script src="calculator.js"></script>
   </head>
   <body ng-controller="calcCtrl">
-    <div class="site-wrapper">
 
-      <div class="site-wrapper-inner">
 
-        <div class="cover-container">
+    <main class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-5">
+          <h1 class="text-center main">Cat Food Analysis</h1>
+          <p class="lead">Figure out how much protein, fat and carbs are in your kitty's food by entering the percentages found on the package's Guaranteed Analysis:</p>
+          <div class="row" ng-hide="authorized">
+            <form  role="form" ng-submit="calcNutrition()">
 
-          <div class="inner cover">
-            <div class="row">
-              <div class="col-md-7">
-                <h1>Cat Food Analysis</h1>
-                <p class="lead">Figure out how much protein, fat and carbs are in your kitty's food by entering the percentages found on the package's Guaranteed Analysis:</p>
-                <div class="row">
-                  <div class="form-group">
-                    <label for="protein" class="col-sm-7 control-label">Minimum Crude Protein</label>
-                    <div class="col-sm-5">
-                      <div class="input-group">
-                        <input id="protein" type="number" class="form-control" ng-model="minCrudeProtein">
-                      <div class="input-group-addon">%</div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="fat" class="col-sm-7 control-label">Minimum Crude Fat</label>
-                    <div class="col-sm-5">
-                      <div class="input-group">
-                        <input id="fat" type="number" class="form-control" ng-model="minCrudeFat">
-                      <div class="input-group-addon">%</div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="fiber" class="col-sm-7 control-label">Maximum Crude Fiber</label>
-                    <div class="col-sm-5">
-                      <div class="input-group">
-                        <input id="fiber" type="number" class="form-control" ng-model="maxCrudeFiber">
-                      <div class="input-group-addon">%</div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="moisture" class="col-sm-7 control-label">Moisture</label>
-                    <div class="col-sm-5">
-                      <div class="input-group">    
-                      <input id="moisture" type="number" class="form-control" ng-model="moisture">
+              <div class="form-group">
+                <label for="protein" class="col-sm-7 control-label">Minimum Crude Protein</label>
+                <div class="col-sm-5">
+                  <div class="input-group">
+                    <input id="protein" class="form-control" ng-model="minCrudeProtein">
                     <div class="input-group-addon">%</div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="ash" class="col-sm-7 control-label">Maximum Ash</label>
-                    <div class="col-sm-5">
-                      <div class="input-group">
-                        <input id="ash" type="number" class="form-control" ng-model="maxAsh">
-                      <div class="input-group-addon">%</div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-sm-offset-7 col-sm-5">
-                      <button id="calculate" type="submit" class="btn btn-default" ng-click="calcNutrition()">Calculate</button>
-                    </div>
                   </div>
                 </div>
-              </div><!-- col-md-7 -->
-              <div class="col-md-5" ng-show="authorized">
-                <h3 id="results-title">{{ resultsTitle }}</h3>
-                <dl class="dl-horizontal">
-                  <dt id="pro-term">{{ proteinTitle }}</dt>
-                  <dd id="pro-def">{{ proteinPercent }}</dd>
-                  <dt id="fat-term">{{ fatTitle }}</dt>
-                  <dd id="fat-def">{{ fatPercent }}</dd>
-                  <dt id="carb-term">{{ carbTitle }}</dt>
-                  <dd id="carb-def">{{ carbPercent }}</dd>
-                </dl>
-              </div><!-- col-md-5 -->
-            </div><!-- row -->
-          </div><!-- inner cover -->
+              </div>
 
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Created with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> by <a href="https://jackie.io">Jackie Johnston</a>. For more information on feline nutrition, go to <a href="http://www.catinfo.org/">CatInfo.org</a>.</p>
+              <div class="form-group">
+                <label for="fat" class="col-sm-7 control-label">Minimum Crude Fat</label>
+                <div class="col-sm-5">
+                  <div class="input-group">
+                    <input id="fat" class="form-control" ng-model="minCrudeFat">
+                    <div class="input-group-addon">%</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="fiber" class="col-sm-7 control-label">Maximum Crude Fiber</label>
+                <div class="col-sm-5">
+                  <div class="input-group">
+                    <input id="fiber" class="form-control" ng-model="maxCrudeFiber">
+                    <div class="input-group-addon">%</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="moisture" class="col-sm-7 control-label">Moisture</label>
+                <div class="col-sm-5">
+                  <div class="input-group">    
+                    <input id="moisture" class="form-control" ng-model="moisture">
+                    <div class="input-group-addon">%</div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="ash" class="col-sm-7 control-label">Maximum Ash</label>
+                <div class="col-sm-5">
+                  <div class="input-group">
+                    <input id="ash" class="form-control" ng-model="maxAsh">
+                    <div class="input-group-addon">%</div>
+                  </div>
+                </div>
+              </div>
+       
+
+              <div class="form-group">
+                <div class="col-sm-offset-7 col-sm-5">
+                  <button type="submit" class="btn btn-default">Calculate</button>
+                </div>
+              </div>
+
+
+            </form>
+          </div><!-- row -->
+        
+          <div ng-show="authorized">
+            <h3 class="text-center results">{{ resultsTitle }}</h3>
+            <dl class="dl-horizontal">
+              <dt>{{ proteinPercent }}</dt>
+              <dd>{{ proteinTitle }}</dd>
+              <dt>{{ fatPercent }}</dt>
+              <dd>{{ fatTitle }}</dd>
+              <dt>{{ carbPercent }}</dt>
+              <dd>{{ carbTitle }}</dd>
+            </dl>
+            <div class="text-center">
+              <button class="btn btn-default" ng-click="flipSwitch()">Make Another Calculation</button>
             </div>
           </div>
+        </div><!-- col-xs-12 col-sm-6 col-md-5 -->
+      </div><!-- row -->
+    </main><!-- container -->
 
-        </div>
 
-      </div>
+    <footer class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+          <p>Created with <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> by <a href="https://jackie.io">Jackie Johnston</a>. For more information on feline nutrition, go to <a href="http://www.catinfo.org/">CatInfo.org</a>.</p>
+        </div><!-- col-md-12 -->
+      </div><!-- row -->
+    </footer><!-- container -->
 
-    </div>
+
+
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>  
 
-    <script>
+    <script type="text/javascript">
       /*!
        * IE10 viewport hack for Surface/desktop Windows 8 bug
        * Copyright 2014 Twitter, Inc.
@@ -130,5 +144,7 @@
         }
       })();
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="calculator.js"></script>
   </body>
 </html>
